--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,6 +29,19 @@
     U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+/* press-start-2p-cyrillic-400-normal */
+@font-face {
+  font-family: "press-start-2p";
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/cyrillic-400-normal.woff2)
+      format('woff2'),
+    url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/cyrillic-400-normal.woff)
+      format('woff');
+  unicode-range: U+0301,U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116;
+}
+
 @theme {
   --font-mono: "IBM Plex Mono", ui-monospace, monospace;
   --font-display: "press-start-2p", ui-monospace, monospace;
