- Added ImageBox, VideoBox, and ModelViewer components - Some text

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -140,3 +140,11 @@
     font-variation-settings: "opsz" 72;
   }
 }
+
+html:not(.dark) .dark-only {
+  display: none;
+}
+
+html.dark .light-only {
+  display: none;
+}
