--- a/src/components/VideoBox.astro
+++ b/src/components/VideoBox.astro
@@ -1,6 +1,6 @@
 ---
 const {src} = Astro.props;
-const {lightOrDark="both"} = Astro.props; // both, light, dark, invertLight, invertDark
+const {poster="", lightOrDark="both"} = Astro.props; // both, light, dark, invertLight, invertDark
 let visibilityClass = ""
 let invertClass = ""
 
@@ -14,7 +14,7 @@ if (lightOrDark!="both"){
 }
 ---
 <div class={visibilityClass}>
-    <video  class={invertClass} controls src={src}/>
+    <video  poster={poster} class={invertClass} controls src={src}/>
     <hr class="mb-1 -mt-5"/>
     <p><slot/></p>
 </div>
