--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -4,10 +4,15 @@ import ModelViewer from "../ModelViewer.astro";
 ---
 
 <div class="flex flex-col items-center sm:flex-row gap-8">
-  <ModelViewer
+  <!-- <ModelViewer
     classes="bg-black rounded-full max-w-40 w-40 h-40 mb-4 z-0 grayscale"
     src="/me.glb"
-    positions={[[2.06247, -0.516702, 0.692462], [2.2, 0, 0],]}/>
+    positions={[[2.06247, -0.516702, 0.692462], [2.2, 0, 0],]}/> -->
+  <img
+    src={GLOBAL.profileImage}
+    alt={GLOBAL.username}
+    class="rounded-full max-w-40 w-40 h-40 mb-4 z-0 grayscale"
+  />
   <div>
     <h1
       class="text-3xl sm:text-4xl font-display font-semibold opsz text-center sm:text-left"
